--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.example.photo"
+        applicationId "com.example.buttomnavigationwithfab"
         minSdk 21
         targetSdk 30
         versionCode 1
