--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Photo">
+        android:theme="@style/Theme.Fab_Bottom_app_bar">
         tools:replace="android:allowBackup"
         tools:node="replace"
         <activity
